# retrogamer

./: .gitignore  LICENSE  README.md  deploy.sh  pyproject.toml  run_emulator.py  run_hardware.py
.claude/: settings.local.json
backends/: emulator_audio.py  emulator_display.py  emulator_hal.py  emulator_input.py  hardware_hal.py
games/breakout/: ball.py  bricks.py  game.py  paddle.py  states.py
games/flappy/: game.py  states.py
games/frogger/: game.py  states.py
games/launcher/: game.py
games/platformer/: campaigns.py  game.py  levels.py  states.py
games/pong/: ai.py  ball.py  game.py  paddle.py  states.py
games/simon/: game.py  states.py
games/snake/: game.py  states.py
games/space_invaders/: bullet.py  game.py  invader.py  player.py  states.py
games/tetris/: game.py  states.py
lib/engine/: colors.py  font.py  game.py  sprite.py  state.py
lib/hal/: __init__.py  interface.py
lib/utils/: math_helpers.py
tools/: screen_editor.py
